third_party/move/move-compiler-v2/tests/lambda/inline-parity/lambda_return.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::LambdaReturn {
    public fun inline_apply2(f: |u64|u64,b: u64): u64 {
        return (f)(b)
    }
    private fun test_lambda_symbol_param() {
        {
          let a: u64 = LambdaReturn::inline_apply2(closure#0LambdaReturn::test_lambda_symbol_param$lambda$1(), 3);
          if Eq<u64>(a, 3) {
            Tuple()
          } else {
            Abort(0)
          };
          Tuple()
        }
    }
    private fun test_lambda_symbol_param$lambda$1(x: u64): u64 {
        x
    }
} // end 0x42::LambdaReturn

// -- Sourcified model before bytecode pipeline
module 0x42::LambdaReturn {
    public fun inline_apply2(f: |u64|u64, b: u64): u64 {
        f(b)
    }
    fun test_lambda_symbol_param() {
        let a = inline_apply2(|arg0| test_lambda_symbol_param$lambda$1(arg0), 3);
        if (a == 3) () else abort 0;
    }
    fun test_lambda_symbol_param$lambda$1(x: u64): u64 {
        x
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/lambda_return.move:3:9
  │
3 │     return f(b)
  │            ^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/lambda_return.move:7:24
  │
7 │     let a = inline_apply2(|x| { x }, 3);
  │                           ^^^^^^^^^
